// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home view matches snapshot (coordinator) 1`] = `
<div
  className="home-view app-view"
>
  <Memo(StatusCard) />
  <Memo(DatasourcesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": false,
        "queryType": "none",
      }
    }
  />
  <Memo(SegmentsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": false,
        "queryType": "none",
      }
    }
  />
  <Memo(ServicesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": false,
        "queryType": "none",
      }
    }
  />
  <Memo(LookupsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": false,
        "queryType": "none",
      }
    }
  />
</div>
`;

exports[`home view matches snapshot (full) 1`] = `
<div
  className="home-view app-view"
>
  <Memo(StatusCard) />
  <Memo(DatasourcesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": true,
        "queryType": "nativeAndSql",
      }
    }
  />
  <Memo(SegmentsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": true,
        "queryType": "nativeAndSql",
      }
    }
  />
  <Memo(SupervisorsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": true,
        "queryType": "nativeAndSql",
      }
    }
  />
  <Memo(TasksCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": true,
        "queryType": "nativeAndSql",
      }
    }
  />
  <Memo(ServicesCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": true,
        "queryType": "nativeAndSql",
      }
    }
  />
  <Memo(LookupsCard)
    capabilities={
      Capabilities {
        "coordinator": true,
        "overlord": true,
        "queryType": "nativeAndSql",
      }
    }
  />
</div>
`;

exports[`home view matches snapshot (overlord) 1`] = `
<div
  className="home-view app-view"
>
  <Memo(StatusCard) />
  <Memo(SupervisorsCard)
    capabilities={
      Capabilities {
        "coordinator": false,
        "overlord": true,
        "queryType": "none",
      }
    }
  />
  <Memo(TasksCard)
    capabilities={
      Capabilities {
        "coordinator": false,
        "overlord": true,
        "queryType": "none",
      }
    }
  />
</div>
`;
